--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -7,7 +7,6 @@ on:
       - stage
       - main
 
-
 jobs:
   terraform-apply:
     name: Apply Terraform
@@ -22,12 +21,17 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1 # change if you're using another region
+          aws-region: us-east-1
 
-      # - name: 🚀 Run Terraform BootStrap Script
-      #   run: |
-      #     chmod +x ./scripts/terraform_deploy_bootstrap.sh
-      #     ./scripts/terraform_deploy_bootstrap.sh
+      - name: 🛠️ Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.6.6
+
+      - name: 🚀 Run Terraform BootStrap Script
+        run: |
+          chmod +x ./scripts/terraform_deploy_bootstrap.sh
+          ./scripts/terraform_deploy_bootstrap.sh
 
       - name: 🚀 Run Terraform Main Script
         run: |
