--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@
 # Ignore Terraform directories
 .terraform/
 
-# Ignore local environment files
-*.tfvars
-*.tfvars.json
+# # Ignore local environment files
+# *.tfvars
+# *.tfvars.json
 
 # Ignore log files
 *.log
