Changes in yaml file to update remote state s3  according to branch name

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -34,9 +34,9 @@ jobs:
       - name: 🚀 Run Terraform BootStrap Script
         run: |
           chmod +x ./scripts/terraform_deploy_bootstrap.sh
-          ./scripts/terraform_deploy_bootstrap.sh
+          ./scripts/terraform_deploy_bootstrap.sh ${{ github.ref_name  }}
 
       - name: 🚀 Run Terraform Main Script
         run: |
           chmod +x ./scripts/terraform_deploy_main.sh
-          ./scripts/terraform_deploy_main.sh ${{ github.head_ref }}
+          ./scripts/terraform_deploy_main.sh ${{ github.ref_name  }}
